--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
 					<div class="form-group">
 						<label for="type">Account type:</label>
 						<select class="form-control" id="type">
-							<option value="Minecraft">Minecraft</option>
-							<option value="Spotify">Spotify</option>
-							<option value="Netflix">Netflix</option>
+							<option value="Valorant">Valorant</option>
+							<option value="Disney">Disney</option>
+							<option value="NordVPN">NordVPN</option>
 						</select>
 					</div>
 					<button class="btn btn-dark btn-lg" id="generate">Generate</button>
-					<p class="pt-3">Or you can call the API using <code>/api/generate.php?type=</code></p>
 				</form>
 			</div>
 		</div>
